# terraform-provider-power-platform

./: .changie.yaml  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .terraformrc  CHANGELOG.md  CLI.md  CODEOWNERS  CONTEXT.md  CONTRIBUTING.md  DEVELOPER.md  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SUPPORT.md  copilot-setup-steps.yml  dev.tfrc  fix_api_docs_folders.sh  for grouping  go.mod  go.sum  license.sh  main.go  makefile  merge_error_handling_issues.sh  mkdocs.yml  organize_api_docs.sh  rename_api_docs_folders.sh  tools.go
.magentic-one/find_all_issues/: agent.py  debug_logs.md  debugging_attempt_logs.md  prompts.py  pyproject.toml  run.py
.magentic-one/find_all_issues/issues_found/: scoring_results.prompt.md
.magentic-one/find_all_issues/issues_found/api_client/: api_environment_group_medium.md  api_rest_sensitive_logging_high.md  api_solution_unquoted_solution_id_medium.md  api_user_go_raw_id_string_injection_medium.md  auth_go_missing_retry_logic_http_medium.md  context_propagation_medium.md  datasource_analytics_data_exports_go_api_client_medium.md  datasource_connection_shares_api-error-detail-medium.md  datasource_tenant_api_client_high.md  resource_managed_environment_missing_api_client_nil_check_high.md
.magentic-one/find_all_issues/issues_found/critical/: Lack_of_Validation_for_Struct_Fields.md  TestUnitEnvironmentApplicationPackagesDataSource_Validate_Read_Invalid_URLs.md  api_dlp_policy_Critical_Issue_1.md  api_languages_improper_error_handling.md  api_licensing_infinite_retry.md  api_solution_issue_missing_import_completion_mechanism.md  cert_potential_panic_due_to_unchecked_return_values.md  datasource_connectors_issue_nil_connectors.md  (+28 more)
.magentic-one/find_all_issues/tools/: file_manager.py  shell.py
.mcp_servers/ai-mcp/: init.py  magentic_one_agent.py  pyproject.toml  server.py
.mcp_servers/mitmproxy-mcp/: README.md  pyproject.toml
_migration/find_all_issues/: README.md  agent.py  prompts.py  pyproject.toml  run.py
(+3388 files in other folders)
