[project]
name = "mitmproxy-mcp"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.3.0",
 "mitmproxy>=11.0.2",
]
[[project.authors]]
name = "Lucas Soeth"
email = "lucasoeth@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mitmproxy-mcp = "mitmproxy_mcp:main"
